fix column sizing

--- a/www/index.html
+++ b/www/index.html
@@ -73,12 +73,12 @@
     <section class="section">
         <div class="container">
             <div id="va" class="row vertical-align">
-                <div class="col-md-6 col-md-offset-2 col-xs-12 col-sm-push-5">
+                <div class="col-md-6 col-xs-12 col-sm-push-6 extra-padding">
                     <div class="content-iphone">
-                        <img class="img-responsive img-center" src="map.png" alt="iphone">
+                        <img class="img-responsive" src="map.png" alt="iphone">
                     </div>
                 </div>
-                <div class="col-md-5 col-md-offset-1 col-xs-12 col-sm-pull-7">
+                <div class="col-md-6 col-xs-12 col-sm-pull-6 extra-padding">
                     <div class="text-center description">
                         <h2>Based on an interactive map</h2>
                         <h3>
@@ -96,13 +96,13 @@
     <section class="section">
         <div class="container">
             <div id="va2" class="row vertical-align">
-                <div class="col-md-6 col-xs-12">
-                    <div class="right-pad">
+                <div class="col-md-6 col-xs-12 extra-padding">
+                    <div class="">
                         <img class="img-responsive computer" src="computer.jpg" alt="iphone">
                     </div>
                 </div>
-                <div class="col-md-5 col-xs-12">
-                    <div class="text-center description">
+                <div class="col-md-6 col-xs-12">
+                    <div class="text-center description extra-padding">
                         <h2>Sketch ideas, leave comments, upload proposals</h2>
                         <h3>
                            Vote on the proposals as a neighborhood and bring them to the attention of investors and city officials.
